--- a/v2.html
+++ b/v2.html
@@ -74,7 +74,8 @@
                 <p class="price mbr-fonts-style mb-4 display-7">If You Pay a Amount You Complete the steps before Exit</p>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">1. Pay Using UPI Payment " Click The Button For Payment"<br><br>2. Capture A screen short then Upload or Enter a Valid Payment ID<br><br><br>3, Enter Your details&nbsp; and Service details&nbsp;</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-danger display-7" href="upi://pay?pa=ttamashbinpajeesh@paytm" target="_blank">Buy now</a></div>
-              </div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-danger display-7" href="https://techtoamyt.github.io/payme/v2.html/qr.html" target="_blank">UPI QR CODE</a></div>
+	      </div>
             </div>
           </div>
         </div>
