--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h5 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>AM industry's</strong><br><strong>UPI</strong><br><strong> INTERFACE</strong></h5>
                 <p class="price mbr-fonts-style mb-4 display-7">If You Pay a Amount You Complete the steps before Exit</p>
                 <p class="mbr-text mbr-fonts-style mb-4 display-7">1. Pay Using UPI Payment " Click The Button For Payment"<br><br>2. Capture A screen short then Upload or Enter a Valid Payment ID<br><br><br>3, Enter Your details&nbsp; and Service details&nbsp;</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-danger display-7" href="upi://pay?pa=ttamashbinpajeesh@paytm" target="_blank">Buy now</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-danger display-7" href="upi://pay?pa=ttamashbinpajeesh@paytm&pn=AM%20INDUSTRY%27S%20OFFICIAL&cu=INR&am=99" target="_blank">Buy now</a></div>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-lg btn-danger display-7" href="https://techtoamyt.github.io/qr/" target="_blank">UPI QR CODE</a></div>
 	      </div>
             </div>
