--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  >
 <head>
+	<meta name="google-adsense-account" content="ca-pub-6700613757323923">
   <!-- v5.9.6, AM industry's -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
