--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html  >
 <head>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6700613757323923"
+     crossorigin="anonymous"></script>
+	
 	<meta name="google-adsense-account" content="ca-pub-6700613757323923">
   <!-- v5.9.6, AM industry's -->
   <meta charset="UTF-8">
